incorporación de font awesome en el div guarantee

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> rootdesign | smart design</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 
 <body>
@@ -58,8 +59,8 @@
                 </div>
                 <div class="guarantee">
                     <ul>
-                        <li><img src="img/check-icon.png" alt="check icon"> Free 14-day trial</li>
-                        <li><img src="img/check-icon.png" alt="check icon"> No credit card required</li>
+                        <li><i class="fa-solid fa-circle-arrow-right"></i> Free 14-day trial</li>
+                        <li><i class="fa-solid fa-circle-arrow-right"></i>No credit card required</li>
                     </ul>
 
                 </div>
