--- a/index.html
+++ b/index.html
@@ -88,7 +88,35 @@
                 </ul>
             </div>
         </section>
-   
+
+        <!-- CARDS -->
+
+        <section id="skills">
+            <div class="title-section">
+                <h2>Construimos calidad</h2>
+                <h3>Nuestas habilidades especiales</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, id. Consequatur ipsa saepe quo culpa
+                    illum aspernatur voluptatem suscipit modi.</p>
+            </div>
+            <div class="cards">
+                <div class="card">
+                    <div class="icon"></div>
+                    <span>Calidad primero</span>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, reiciendis!</p>
+                </div>
+                <div class="card">
+                    <div class="icon"></div>
+                    <span>Comunicación</span>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, reiciendis!</p>
+                </div>
+                <div class="card">
+                    <div class="icon"></div>
+                    <span>Fiabilidad</span>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, reiciendis!</p>
+                </div>
+            </div>
+        </section>
+        
     </main>
 </body>
 
