--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
             </div>
             <div class="cards">
                 <div class="card">
-                    <div class="icon"></div>
+                    <div class="icon"><i class="fa-solid fa-shield-halved"></i></i></div>
                     <span>Calidad primero</span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, reiciendis!</p>
                 </div>
                 <div class="card">
-                    <div class="icon"></div>
+                    <div class="icon"><i class="fa-solid fa-comments"></i></div>
                     <span>Comunicación</span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, reiciendis!</p>
                 </div>
                 <div class="card">
-                    <div class="icon"></div>
+                    <div class="icon"><i class="fa-solid fa-face-smile-beam"></i></div>
                     <span>Fiabilidad</span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, reiciendis!</p>
                 </div>
@@ -129,14 +129,14 @@
                 <div class="contact-columns">
 
                     <div class="contact-telefono">
-                        <div class="contact-icon"></div>
+                        <div class="contact-icon"><i class="fa-solid fa-phone"></i></div>
                         <h3>Llamanos</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <span>0800-444-0800</span>
                     </div>
 
                     <div class="contact-chat">
-                        <div class="contact-icon"></div>
+                        <div class="contact-icon"><i class="fa-solid fa-message"></i></div>
                         <h3>Chatea ahora</h3>
                         <p>Lorem ipsum dolor sit amet <strong>consectetur adipisicing elit.</strong></p>
                         <span>Ir al chat ahora</span>
@@ -424,11 +424,59 @@
         </section>
         <footer>
             <div class="columns">
-                <div class="footer-column"></div>
-                <div class="footer-column"></div>
-                <div class="footer-column"></div>
+                <div class="footer-column">
+                    <div class="footer-logo">
+                        <img src="img/root-design-logo.png" alt="logo">
+                    </div>
+                    <p>Nuestras últimas noticias, artículos y recursos, los enviaremos a su bandeja de entrada semanalmente.</p>
+                    <div class="form-subscribe">
+                        <form>
+                            <input class="text-email" type="text" name="name" id="name" placeholder="Suscribite!"> <button type="submit">Enviar!</button>                        
+                        </form>
+                    </div>
+                    <h3>10/10 Overall rating</h3>
+                    <p class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+                </div>
+                <div class="footer-column">
+                    <h3>List of links 1</h3>
+                    <ul>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                        <li><a href="#">Link 4</a></li>
+                        <li><a href="#">Link 5</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>List of links 2</h3>
+                    <ul>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                        <li><a href="#">Link 4</a></li>
+                        <li><a href="#">Link 5</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>List of links 3</h3>
+                    <ul>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                        <li><a href="#">Link 4</a></li>
+                        <li><a href="#">Link 5</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="copyright"></div>
+            <div class="copyright-social-media">
+                <p>Copyright 2022 rootdesign | Todos los derechos reservados</p>
+                <ul>
+                    <li><i class="fa-brands fa-facebook"></i></li>
+                    <li><i class="fa-brands fa-instagram"></i></li>
+                    <li><i class="fa-solid fa-envelope"></i></li>
+                    <li><i class="fa-brands fa-github"></i></li>
+                </ul>
+            </div>
         </footer>
     </main>
 </body>
