optimización del código

--- a/index.html
+++ b/index.html
@@ -415,8 +415,11 @@
                             <option value="Zambia">Zambia</option>
                             <option value="Zimbabwe">Zimbabwe</option>
                         </select>
-                        <textarea placeholder="Cuentanos mas acerca de tu proyecto, necesidades y presupuesto"></textarea>
-                            <label><input type="checkbox"> Sí, me gustaría recibir correos electrónicos de marketing de vez en cuando. Podrá desuscribirse en cualquier momento que lo desee <a href="#">Ver política de privacidad.</a></label>
+                        <textarea
+                            placeholder="Cuentanos mas acerca de tu proyecto, necesidades y presupuesto"></textarea>
+                        <label><input type="checkbox"> Sí, me gustaría recibir correos electrónicos de marketing de vez
+                            en cuando. Podrá desuscribirse en cualquier momento que lo desee <a href="#">Ver política de
+                                privacidad.</a></label>
                     </form>
                 </div>
                 <button class="form-boton" type="submit">Enviar!</button>
@@ -428,14 +431,18 @@
                     <div class="footer-logo">
                         <img src="img/root-design-logo.png" alt="logo">
                     </div>
-                    <p>Nuestras últimas noticias, artículos y recursos, los enviaremos a su bandeja de entrada semanalmente.</p>
+                    <p>Nuestras últimas noticias, artículos y recursos, los enviaremos a su bandeja de entrada
+                        semanalmente.</p>
                     <div class="form-subscribe">
                         <form>
-                            <input class="text-email" type="text" name="name" id="name" placeholder="Suscribite!"> <button type="submit">Enviar!</button>                        
+                            <input class="text-email" type="text" name="name" id="name" placeholder="Suscribite!">
+                            <button type="submit">Enviar!</button>
                         </form>
                     </div>
                     <h3>10/10 Overall rating</h3>
-                    <p class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+                    <p class="stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                            class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                            class="fa-solid fa-star"></i></p>
                 </div>
                 <div class="footer-column">
                     <h3>List of links 1</h3>
